force-app/main/default/objects/AINavTabSection__mdt/AINavTabSection__mdt.object-meta.xml
<CustomObject>
    <description>Protected (managed package) child record — one per section or related list within a tab, linked to its parent via a Metadata Relationship.</description>
    <label>AI Nav Tab Section</label>
    <pluralLabel>AI Nav Tab Sections</pluralLabel>
</CustomObject>