force-app/main/default/objects/AINavTabSection__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this section shows.</description>
    <inlineHelpText>Turn this off to hide the section without removing its configuration.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>