force-app/main/default/objects/AINavTabSection__mdt/fields/BadgeFilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>BadgeFilterCriteria__c</fullName>
    <description>SOQL WHERE condition counted on Related Object API Name to show a number next to a Sub Navigation item. Blank shows no number.</description>
    <inlineHelpText>Enter a filter such as SetupStatus__c != &apos;Complete&apos;. Use Id != null to count every record.</inlineHelpText>
    <label>Badge Filter Criteria</label>
    <type>TextArea</type>
</CustomField>