force-app/main/default/objects/AINavTabSection__mdt/fields/CollapsedByDefault__c.field-meta.xml
<CustomField>
    <fullName>CollapsedByDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this section starts expanded or collapsed.</description>
    <inlineHelpText>Turn this on if this section should start collapsed.</inlineHelpText>
    <label>Collapsed By Default</label>
    <type>Checkbox</type>
</CustomField>