force-app/main/default/objects/AINavTabSection__mdt/fields/ComponentAPIName__c.field-meta.xml
<CustomField>
    <fullName>ComponentAPIName__c</fullName>
    <description>The LWC to render.</description>
    <inlineHelpText>Required if Section Type is Component or Sub Navigation. Read by the container LWC to dynamically load the correct child component.</inlineHelpText>
    <label>Component API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>