force-app/main/default/objects/AINavTabSection__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Position within the parent tab.</description>
    <inlineHelpText>Set a number controlling where this section appears relative to others under the same tab.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>