force-app/main/default/objects/AINavTabSection__mdt/fields/ExternalURLOverride__c.field-meta.xml
<CustomField>
    <fullName>ExternalURLOverride__c</fullName>
    <description>Section-scoped external link override.</description>
    <inlineHelpText>Enter a URL if this section should link out rather than render internally.</inlineHelpText>
    <label>External URL Override</label>
    <type>Url</type>
</CustomField>