force-app/main/default/objects/AINavTabSection__mdt/fields/FilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>FilterCriteria__c</fullName>
    <description>Optional SOQL filter narrowing what shows.</description>
    <inlineHelpText>Enter a filter condition to limit what this section displays.</inlineHelpText>
    <label>Filter Criteria</label>
    <type>TextArea</type>
</CustomField>