force-app/main/default/objects/AINavTabSection__mdt/fields/MaxRecordsShown__c.field-meta.xml
<CustomField>
    <fullName>MaxRecordsShown__c</fullName>
    <description>Row cap before &quot;View all.&quot;</description>
    <inlineHelpText>Set how many records display before requiring a click-through.</inlineHelpText>
    <label>Max Records Shown</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>