force-app/main/default/objects/AINavTabSection__mdt/fields/OpenInNewTab__c.field-meta.xml
<CustomField>
    <fullName>OpenInNewTab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this section&apos;s &quot;View all&quot; link opens in a new tab.</description>
    <inlineHelpText>Turn this on if this section&apos;s link should open externally.</inlineHelpText>
    <label>Open In New Tab</label>
    <type>Checkbox</type>
</CustomField>