force-app/main/default/objects/AINavTabSection__mdt/fields/ParentTab__c.field-meta.xml
<CustomField>
    <fullName>ParentTab__c</fullName>
    <description>Which tab this section belongs to.</description>
    <inlineHelpText>Select the tab this section should appear under.</inlineHelpText>
    <label>Parent Tab</label>
    <referenceTo>AINavTab__mdt</referenceTo>
    <relationshipLabel>AI Nav Tab Sections</relationshipLabel>
    <relationshipName>AI_Nav_Tab_Sections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>