force-app/main/default/objects/AINavTabSection__mdt/fields/RelatedObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectAPIName__c</fullName>
    <description>Object queried, if Related List.</description>
    <inlineHelpText>Required if Section Type is Related List. Enter the object this section should list.</inlineHelpText>
    <label>Related Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>