force-app/main/default/objects/AINavTabSection__mdt/fields/RequiresPermissionSet__c.field-meta.xml
<CustomField>
    <fullName>RequiresPermissionSet__c</fullName>
    <description>Section-level visibility restriction, independent of the parent tab&apos;s.</description>
    <inlineHelpText>Enter a Permission Set API name required to see this section. Leave blank for no restriction.</inlineHelpText>
    <label>Requires Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>