force-app/main/default/objects/AINavTabSection__mdt/fields/SectionIcon__c.field-meta.xml
<CustomField>
    <fullName>SectionIcon__c</fullName>
    <description>Icon shown next to this section.</description>
    <inlineHelpText>Enter the icon reference for this section.</inlineHelpText>
    <label>Section Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>