force-app/main/default/objects/AINavTabSection__mdt/fields/SectionLabel__c.field-meta.xml
<CustomField>
    <fullName>SectionLabel__c</fullName>
    <description>Display name shown in sub-navigation.</description>
    <inlineHelpText>Enter the label shown to admins navigating this section.</inlineHelpText>
    <label>Section Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>