force-app/main/default/objects/AINavTabSection__mdt/fields/SectionType__c.field-meta.xml
<CustomField>
    <fullName>SectionType__c</fullName>
    <description>What kind of section this renders as.</description>
    <inlineHelpText>Choose Related List, Sub Navigation, or Component.</inlineHelpText>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Related List</fullName>
            </value>
            <value>
                <fullName>Sub Navigation</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>