force-app/main/default/objects/AINavTabSection__mdt/fields/SectionWidth__c.field-meta.xml
<CustomField>
    <fullName>SectionWidth__c</fullName>
    <description>How much of the page row a Component or Related List section takes. Sections flow left to right in Display Order, three columns to a row.</description>
    <inlineHelpText>Full takes the whole row. Two Thirds and One Third sit side by side. Ignored for Sub Navigation sections.</inlineHelpText>
    <label>Section Width</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Two Thirds</fullName>
            </value>
            <value>
                <fullName>One Third</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>