force-app/main/default/objects/AINavTabSection__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>ParentTab__c</columns>
    <columns>Active__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>SectionType__c</columns>
    <columns>RelatedObjectAPIName__c</columns>
    <columns>ComponentAPIName__c</columns>
    <columns>RequiresPermissionSet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>